// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildZeroState snapshot test should render loading state properly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main loadingContainer"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="report-gear-grey"
      style="margin: 0px auto;"
    >
      <svg
        fill="none"
        height="100"
        viewBox="0 0 86 71"
        width="100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M74.284 15.238H11.428a5.714 5.714 0 00-5.714 5.714v40a5.714 5.714 0 005.714 5.714h62.856a5.714 5.714 0 005.714-5.714v-40a5.714 5.714 0 00-5.714-5.714z"
          fill="#6b6d85"
        />
        <path
          d="M19.047.15h47.618a5.564 5.564 0 015.564 5.564v56.992H13.483V5.714A5.564 5.564 0 0119.047.15z"
          fill="#f3f3fa"
          stroke="#000"
          stroke-width="0.3"
        />
        <path
          d="M19.047 5.715h3.81v3.81h-3.81zM26.666 5.715h3.81v3.81h-3.81zM34.285 5.715h3.81v3.81h-3.81zM19.047 13.332h47.618v3.81H19.047zM19.047 20.953h11.428v3.81H19.047zM19.047 28.574h7.619v3.81h-7.62z"
          fill="#9293ab"
        />
        <g
          fill="#b0b1c4"
        >
          <path
            d="M22.857 45.719h3.81v5.714h-3.81zM30.476 36.191h3.81V51.43h-3.81zM38.095 40.004h3.81v11.428h-3.81zM45.714 30.48h3.81v20.952h-3.81zM53.333 34.285h3.81v17.143h-3.81zM60.952 22.86h3.81v28.57h-3.81z"
          />
          <path
            d="M19.048 49.527h47.618v3.81H19.048z"
          />
        </g>
        <path
          d="M51.427 60.952a6.503 6.503 0 01-4.598 1.904h-7.946c-1.724 0-3.379-.685-4.598-1.904s-2.874-1.905-4.599-1.905H0v5.714a5.714 5.714 0 005.714 5.714h74.284a5.714 5.714 0 005.714-5.714v-5.714H56.026a6.503 6.503 0 00-4.599 1.905z"
          fill="#d9dae6"
        />
      </svg>
    </span>
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--padding-top-medium"
      style="font-size: 20px; font-weight: 600;"
    >
      pipeline.testsReports.willBeDisplayedIfAvailable
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-large"
      style="font-size: 16px;"
    />
    <a
      href="https://docs.harness.io"
      rel="noreferrer"
      target="_blank"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary6 StyledProps--flex StyledProps--flex-align-center-center"
        style="font-size: 16px; display: flex; align-items: center;"
      >
        learnMore
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary6"
          data-icon="main-share"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.5 12.6H1.4V3.5h6.1l1.4-1.4H.7c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7V5.1l-1.4 1.4zM13.3 0H8.4c-.4 0-.7.3-.7.7s.3.7.7.7h3.2L6.5 6.5c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7V.7c0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
      </p>
    </a>
  </div>
</div>
`;

exports[`BuildZeroState snapshot test should render properly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main loadingContainer"
  >
    <img
      alt=""
      src="test-file-stub"
    />
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--padding-top-medium"
      style="font-size: 20px; font-weight: 600;"
    >
      pipeline.testsReports.noTestResults
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-large"
      style="font-size: 16px;"
    >
      pipeline.testsReports.testsWillAppear
    </p>
    <a
      href="https://ngdocs.harness.io/article/sof7n3qjap-viewing-tests"
      rel="noreferrer"
      target="_blank"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary6 StyledProps--flex StyledProps--flex-align-center-center"
        style="font-size: 16px; display: flex; align-items: center;"
      >
        learnMore
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary6"
          data-icon="main-share"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.5 12.6H1.4V3.5h6.1l1.4-1.4H.7c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7V5.1l-1.4 1.4zM13.3 0H8.4c-.4 0-.7.3-.7.7s.3.7.7.7h3.2L6.5 6.5c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7V.7c0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
      </p>
    </a>
  </div>
</div>
`;
